--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "audiotranscriber"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = "==3.11.9"
 dependencies = [
     "dotenv>=0.9.9",
     "huggingface-hub>=0.32.3",
