--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [project]
 name = "audiotranscriber"
-version = "0.0.2"
+version = "0.0.3"
 description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.9"
 dependencies = [
     "dotenv>=0.9.9",
+    "ffmpeg>=1.4",
     "huggingface-hub>=0.32.3",
     "ipykernel>=6.29.5",
     "langchain-together>=0.3.0",
@@ -18,6 +19,7 @@ dependencies = [
     "pyaudio>=0.2.14",
     "pycld2>=0.42",
     "scipy>=1.15.2",
+    "soundcard>=0.4.4",
     "sounddevice>=0.5.1",
     "speechrecognition>=3.14.2",
     "streamlit>=1.44.1",
