--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.9"
 dependencies = [
+    "deepgram-sdk>=4.8.1",
     "dotenv>=0.9.9",
     "ffmpeg>=1.4",
     "huggingface-hub>=0.32.3",
